# hkteam

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
configs/agents/: comms.yaml  cyber.yaml  cyber_selector_rules.yaml  flood.yaml  flood_selector_rules.yaml  general.yaml  infrastructure.yaml  public_safety.yaml  public_services.yaml  utilities.yaml  utilities_selector_rules.yaml
configs/llm/: local.yaml  multimodel.yaml
configs/skills/: registry.yaml
configs/smart_routing/: category_map.yaml  dependencies.yaml
data/: knowledge_base.md  utilities_network.json
data/examples/: 01-utilities-water-main.txt  02-flood-and-utilities.txt  03-cyber-hospital.txt  README.md  (+8 more)
docs/: AGENTS.md  DOCKER.md  README.md  REQUIREMENTS.md  RUNBOOK_v1.md  TECHNICAL_DESIGN.md  UBUNTU.md
evals/: demo_scenarios.yaml
public/: crisis-favicon.js  crisis-ui.js  crisis.css
scripts/: bootstrap-chainlit.sh  diagnose-chainlit.sh  diagnose-nvidia.sh  generate_favicon_assets.py  prerequisites.sh  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh  test-langfuse-trace.sh  verify-langfuse-keys.sh  verify-nvidia-api.sh
tests/: test_api_health.py  test_chainlit_review_flow.py  test_demo_flow.py  test_dispatch_simulator.py  test_human_decision.py  test_incident_list_api.py  test_langfuse_invoke.py  test_llm_timeout.py  test_nvidia_hints.py  test_pipeline_display.py  test_pipeline_stages_sync.py  test_recommendations_parse.py  test_recommendations_ui.py  test_welcome.py  test_workflow_engine.py
(+78 files in other folders)
