[project]
name = "smart-city-crisis"
version = "1.0.0"
description = "Smart City Crisis Management — multi-agent decision support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-nvidia-ai-endpoints>=0.3.0",
  "chainlit>=2.11.0,<3",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",
  "psycopg[binary]>=3.2.0",
  "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
crisis-api = "crisis.api.main:run"
crisis-demo = "crisis.scripts.run_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crisis"]

[tool.hatch.build.targets.wheel.sources]
"src/crisis" = "crisis"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
